# colorchord

./: .gitignore  CMakeLists.txt  README.md
colorchord2/: CMakeLists.txt  DisplayArray.c  DisplayDMX.c  DisplayFileWrite.c  DisplayHIDAPI.c  DisplayNetwork.c  DisplayPie.c  DisplaySHM.c  DisplayUSB.c  DisplayUSB2812.c  OutputCells.c  OutputLinear.c  OutputProminent.c  OutputRaw.c  OutputVoronoi.c  RecorderPlugin.c  WinDriver.c  colorchord  configs.c  default.conf  main.c  notefinder.c  outdrivers.c  outdrivers.h  sound.h  sound_pulse.c
embeddedcommon/: DFT32.h
